// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#applyConditionals 1`] = `
Object {
  "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
  "config": Object {
    "mark": Object {
      "invalid": null,
    },
  },
  "layer": Array [
    Object {
      "encoding": Object {
        "y": Object {
          "field": "[yDim]",
          "type": "quantitative",
        },
      },
      "mark": Object {
        "extent": "stdev",
        "opacity": 0.2,
        "type": "errorband",
      },
    },
    Object {
      "encoding": Object {
        "y": Object {
          "aggregate": "mean",
          "field": "[yDim]",
          "type": "quantitative",
        },
      },
      "mark": "rule",
    },
    Object {
      "encoding": Object {
        "color": Object {
          "condition": Object {
            "test": "datum.[xDim] === null || datum.[yDim] === null",
            "value": "#aaa",
          },
        },
        "x": Object {
          "field": "[xDim]",
          "scale": Object {
            "zero": "[Zeroes]",
          },
          "type": "[xType]",
        },
        "y": Object {
          "field": "[yDim]",
          "scale": Object {
            "zero": "[Zeroes]",
          },
          "type": "[yType]",
        },
      },
      "mark": Object {
        "color": "[Single Color]",
        "size": "[Radius]",
        "tooltip": true,
        "type": "point",
      },
    },
  ],
}
`;

exports[`#applyConditionals 2`] = `
Object {
  "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
  "config": Object {
    "mark": Object {
      "invalid": null,
    },
  },
  "layer": Array [
    Object {
      "encoding": Object {
        "y": Object {
          "field": "[yDim]",
          "type": "quantitative",
        },
      },
      "mark": Object {
        "extent": "stdev",
        "opacity": 0.2,
        "type": "errorband",
      },
    },
    Object {
      "encoding": Object {
        "y": Object {
          "aggregate": "mean",
          "field": "[yDim]",
          "type": "quantitative",
        },
      },
      "mark": "rule",
    },
    Object {
      "encoding": Object {
        "color": Object {
          "condition": Object {
            "test": "datum.[xDim] === null || datum.[yDim] === null",
            "value": "#aaa",
          },
          "field": "[Color]",
          "type": "[colorType]",
        },
        "x": Object {
          "field": "[xDim]",
          "scale": Object {
            "zero": "[Zeroes]",
          },
          "type": "[xType]",
        },
        "y": Object {
          "field": "[yDim]",
          "scale": Object {
            "zero": "[Zeroes]",
          },
          "type": "[yType]",
        },
      },
      "mark": Object {
        "color": null,
        "size": "[Radius]",
        "tooltip": true,
        "type": "point",
      },
    },
  ],
}
`;

exports[`evaluateIvyProgram polestar template 1`] = `
Object {
  "$schema": "https:vega.github.io/schema/vega-lite/v4.json",
  "encoding": Object {},
  "mark": Object {
    "tooltip": true,
    "type": "circle",
  },
  "transform": Array [],
}
`;

exports[`evaluateIvyProgram polestar template 2`] = `
Object {
  "$schema": "https:vega.github.io/schema/vega-lite/v4.json",
  "encoding": Object {
    "x": Object {
      "aggregate": "none",
      "field": "GooD Dimension",
      "scale": Object {
        "type": "linear",
      },
      "type": "quantitative",
    },
  },
  "mark": Object {
    "tooltip": true,
    "type": "circle",
  },
  "transform": Array [],
}
`;

exports[`evaluateIvyProgram polestar template 3`] = `
Object {
  "$schema": "https:vega.github.io/schema/vega-lite/v4.json",
  "encoding": Object {
    "x": Object {
      "field": "Origin",
      "scale": Object {},
      "type": "nominal",
    },
  },
  "mark": Object {
    "tooltip": true,
    "type": "circle",
  },
  "transform": Array [],
}
`;

exports[`evaluateIvyProgram polestar template 4`] = `
Object {
  "$schema": "galleryLang",
  "SearchKey": "should result",
  "dataTargetSearch": Array [],
  "maxRequiredTargets": "[maxRequiredTargets]",
  "minRequiredTargets": "[minRequiredTargets]",
  "sectionStratagey": "[sectionStratagey]",
}
`;
